--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,12 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <mongo-host>127.0.0.1</mongo-host>
+    <mongo-port>27017</mongo-port>
+    <mongo-username></mongo-username>
+    <mongo-password></mongo-password>
   </properties>
-
+    
   <developers>
     <developer>
       <name>Efraim Gentil</name>
@@ -39,7 +43,7 @@
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongo-java-driver</artifactId>
-      <version>1.3</version>
+      <version>2.11.3</version>
     </dependency>
 
     <!-- TESTE -->
@@ -94,7 +98,6 @@
         </configuration>
       </plugin>
     </plugins>
-
   </build>
-
+  
 </project>
